<resources>
    <string name="app_name">生猪健康</string>
    <string name="app_name1">生猪健康监测平台</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="error_empty">对不起，目前没有数据</string>
    <string name="prompt_loading">正在加载数据</string>
    <string name="selection_pig_farm_default">请选择猪场</string>
    <string name="selection_pig_farm_default_prompt">选择猪场后才能查看猪猪们哦～～</string>

    <!--权限-->
    <string name="permissions_refuse_authorization" translatable="false">被永久拒绝授权，请手动授予权限</string>
    <string name="permissions_rror" translatable="false">获取权限失败</string>

    <!-- 注册 -->
    <string name="verification_code_send">获取验证码</string>
    <string name="verification_code_timer">%1$ss后重新获取</string>

    <!--告警-->
    <string name="alarm_title">告警信息</string>
    <string name="alarm_list_empty">目前没有%1$s数据，下拉刷新试试</string>
    <string name="alarm_list_title_ear_tag">耳标编号</string>
    <string name="alarm_list_title_time">发生时间  </string>
    <string name="alarm_list_title_pigsty_name">猪栏名称</string>
    <string name="alarm_list_title_pig_farm_name">猪场名称</string>
    <string name="alarm_list_title_type">类型</string>
    <string name="alarm_list_title_status_all">查看全部</string>
    <string name="alarm_list_title_status_normal">只看良好</string>
    <string name="alarm_list_title_status_abnormal">只看掉标</string>

    <!--监测-->
    <string name="monitor_chart_model_temp">温度</string>
    <string name="monitor_chart_model_activity">活跃度</string>
    <string name="monitor_chart_activity_title">运动量</string>

    <!-- 管理 -->
    <string name="mgt_pigfarm_online_count">在线猪场：%1$s个</string>
    <string name="mgt_pigfarm_empty">目前没有猪场数据，下拉刷新试试</string>
    <string name="mgt_pigfarm_select_prompt">请选择要删除的猪场</string>
    <string name="mgt_pigfarm_delete_prompt_title">删除猪场</string>
    <string name="mgt_pigfarm_delete_prompt_message">删除后此猪场的数据不可恢复，确定要删除此猪场吗?</string>

    <string name="mgt_pigsty_online_count">在线猪栏：%1$s个</string>
    <string name="mgt_pigsty_empty">目前没有猪栏数据，下拉刷新试试</string>
    <string name="mgt_pigsty_select_prompt">请选择要删除的猪栏</string>
    <string name="mgt_pigsty_delete_prompt_title">删除猪栏</string>
    <string name="mgt_pigsty_delete_prompt_message">删除后此猪栏的数据不可恢复，确定要删除此猪栏吗?</string>

    <string name="mgt_select_max_prompt">一次最多选择50条</string>
    <string name="mgt_select_message">选中%1$s个 / 共%2$s个</string>

    <!--==新增猪栏==-->
    <string name="mgt_pigsty_add_name_hint">扫描二维码获取猪栏名称</string>
    <string name="mgt_pigsty_add_code_hint">点击扫描基站背部二维码</string>


</resources>