<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="32dp"
    android:paddingLeft="8dp"
    android:paddingTop="5dp"
    android:paddingRight="8dp"
    android:paddingBottom="5dp"
    android:background="@color/selector_alarm_item_bg">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/title_flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:constraint_referenced_ids="id,time,name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:textColor="@color/grey_3a"
        android:text="@string/alarm_list_title_ear_tag" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/time"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="4"
        android:gravity="center"
        android:textColor="@color/grey_3a"
        android:text="@string/alarm_list_title_time" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:textColor="@color/grey_3a"
        android:text="@string/alarm_list_title_pigsty_name" />
</androidx.constraintlayout.widget.ConstraintLayout>