<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_alarm_list_bg">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/title_flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="27dp"
        app:constraint_referenced_ids="id,time,name,type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/id"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintHorizontal_weight="1.5"
        android:gravity="center"
        android:textColor="@color/grey_3a"
        android:text="@string/alarm_list_title_ear_tag" />

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintHorizontal_weight="3.5"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/time_label"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_3a"
            android:text="@string/alarm_list_title_time" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_ascend_descend" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintHorizontal_weight="1.5"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_label"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_3a"
            android:text="@string/alarm_list_title_pigsty_name" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/name_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/selector_ascend_descend" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintHorizontal_weight="1.5"
        android:gravity="center_vertical|right"
        android:textColor="@color/grey_3a"
        android:text="@string/alarm_list_title_type" />

    <View
        android:id="@+id/title_line"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_flow"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/grey_76" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:visibility="gone"
                android:id="@+id/prompt"
                style="@style/text_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:drawableTop="@drawable/img_empty"
                android:drawablePadding="25dp"
                android:gravity="center"
                android:textColor="@color/grey_ca"
                android:text="@string/alarm_list_empty" />

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:overScrollMode="never" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>