<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6F2E9"
    android:elevation="5dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/img_back"
        android:drawablePadding="5dp"
        android:text="新增猪栏"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_pigsty_add_bg"
        app:layout_constraintDimensionRatio="720:170"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/text_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_pigsty_add_bg"
        android:gravity="center"
        android:text="存栏信息"
        app:layout_constraintDimensionRatio="720:202"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_label"
        style="@style/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="猪栏名称:"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/name_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_value"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_round_corner_12"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/mgt_pigsty_add_name_hint"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/name_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/code_label"
        style="@style/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:text="基站编码:"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/code_value"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_round_corner_12"
        android:gravity="center"
        android:text="@string/mgt_pigsty_add_code_hint"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_label" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qr_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:text="@string/mgt_pigsty_add_code_hint"
        android:textColor="@color/grey_ca"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@id/code_value"
        app:layout_constraintRight_toRightOf="@id/code_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginRight="10dp"
        android:drawableLeft="@drawable/img_error"
        android:drawablePadding="5dp"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="@id/code_value"
        app:layout_constraintTop_toBottomOf="@id/code_value" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/submit"
        style="@style/text_title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_outline_round_corner_30"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorSelected"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_value" />

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:zxing_framing_rect_height="50dp"
        app:zxing_framing_rect_width="200dp"
        app:zxing_preview_scaling_strategy="fitXY"
        app:zxing_use_texture_view="true"></com.journeyapps.barcodescanner.DecoratedBarcodeView>

</androidx.constraintlayout.widget.ConstraintLayout>