<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/motion_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_main_bg2"
    app:layoutDescription="@xml/fragment_mgt_pigsty_scene">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_back"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/img_back"
        android:drawablePadding="5dp"
        android:text="编辑"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/back"
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/img_back"
        android:drawablePadding="5dp"
        android:text="猪场"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pigfarm_name"
        style="@style/text_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintRight_toLeftOf="@id/pigsty_edit_layout"
        app:layout_constraintBottom_toBottomOf="@id/back"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"/>

    <LinearLayout
        android:id="@+id/pigsty_edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pigsty_add"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/img_pig_farm_item_edit"
            android:drawablePadding="5dp"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="新增"
            android:background="@drawable/shape_outline_round_corner_6"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pigsty_edit"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/img_add"
            android:drawablePadding="5dp"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:gravity="center"
            android:text="编辑"
            android:background="@drawable/shape_outline_round_corner_6"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pigsty_count"
        style="@style/text_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_back"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/img_online"
        android:drawablePadding="5dp"
        android:text="@string/mgt_pigsty_online_count"/>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pigsty_count"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/select_layout"
        android:layout_marginTop="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:visibility="gone"
                android:id="@+id/prompt"
                style="@style/text_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:drawableTop="@drawable/img_empty"
                android:drawablePadding="25dp"
                android:gravity="center"
                android:textColor="@color/grey_ca"
                android:text="@string/mgt_pigfarm_empty"/>
            <androidx.recyclerview.widget.RecyclerView
                android:visibility="gone"
                android:id="@+id/pigsty_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:overScrollMode="never"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

    <View
        android:visibility="gone"
        android:id="@+id/select_shade"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="@id/select_layout"
        app:layout_constraintRight_toRightOf="@id/select_layout"
        app:layout_constraintBottom_toBottomOf="@id/select_layout"
        android:layout_marginBottom="26dp"
        android:background="@drawable/shape_menus_gradient"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/select_layout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@android:color/white"
        android:background="@drawable/shape_pig_farm_bg">

        <com.wuzi.pig.utils.ui.view.AppCompatCheckBoxWrap
            android:id="@+id/checkbox_all"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="16dp"
            android:buttonTint="@color/colorButton"
            android:background="@null"
            android:text="全选"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/checked_msg"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/checkbox_all"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="10dp"
            android:text="@string/mgt_select_message"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/delete_all"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/img_pig_farm_delete"
            android:drawablePadding="5dp"
            android:paddingLeft="8dp"
            android:paddingTop="5dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:text="删除"
            android:background="@drawable/shape_outline_round_corner_6"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>